fix bottom nav on mobile + font sizes

--- a/app/assets/stylesheets/components/_bottom-nav.scss
+++ b/app/assets/stylesheets/components/_bottom-nav.scss
@@ -1,4 +1,5 @@
 .bottom-nav {
+    font-size: 1rem;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -31,11 +32,12 @@
 
     &__pop-up {
         background-color: darken($color-clean, 8%);
-        width: 23%;
         border-radius: $border-radius;
         bottom: 77px;
+        font-size: 1.2rem;
         position: absolute;
         right: 1%;
+        width: 98%;
 
         &__item {
             align-items: center;
@@ -66,6 +68,10 @@
                 margin-right: 0.5em;
                 width: 16px;
             }
+        }
+
+        @include breakpoint($bp-md) {
+            weight: 23%;
         }
     }
 }
